--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -7,6 +7,10 @@ keycloak:
       value: admin
     - name: KEYCLOAK_USER
       value: admin
+    - name: JAVA_OPTS 
+      value: >-
+        -Dkeycloak.profile.feature.scripts=enabled
+        -Dkeycloak.profile.feature.upload_scripts=enabled
 
   extraVolumes: |
     - name: "forms-flow-idm-realm-config"
