--- a/forms-flow-ai/values.yaml
+++ b/forms-flow-ai/values.yaml
@@ -1,5 +1,5 @@
 bpm_keycloak_clientid: forms-flow-bpm
-bpm_keycloak_clientsecret: '97eb25b0-78db-42e1-a4a2-a26fab23f7c1'
+bpm_keycloak_clientsecret: '**********'
 camunda_bpm_url: formsflow.bpm.apps.devops.aot-technologies.com
 formio_admin_email: me@defineme.com
 formio_admin_password: admin
