--- a/forms-flow-analytics/Chart.yaml
+++ b/forms-flow-analytics/Chart.yaml
@@ -4,7 +4,7 @@ dependencies:
   - name: forms-flow-analytics-postgresql
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: redash-redis-cluster-dc
+  - name: redash-redis
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
 name: forms-flow-analytics
