--- a/redash-redis/Chart.yaml
+++ b/redash-redis/Chart.yaml
@@ -1,5 +1,5 @@
 ---
 apiVersion: v2
 description: Redis master/slave templates based on Statefulsets
-name: redash-redis-cluster-dc
+name: redash-redis
 version: v0.0.1
