--- a/redash-redis/values.yaml
+++ b/redash-redis/values.yaml
@@ -5,6 +5,6 @@ redis_exporter_image: oliver006/redis_exporter
 redis_exporter_name: redash-exporter
 redis_exporter_tag: v1.14.0-alpine
 redis_image: redis
-redis_tag: 6.0.12
+redis_tag: latest
 storage: 1Gi
 storage_class: nfs-client
