autobuild redash-redis

--- a/redash-redis/templates/imagestream.yaml
+++ b/redash-redis/templates/imagestream.yaml
@@ -7,9 +7,8 @@ spec:
   tags:
   - from:
       kind: ImageStreamImage
-      name: "{{ .Values.redis_image }}:{{ .Values.redis_tag }}"
       namespace: openshift
-    name: {{.Chart.Name }}
+    name: {{ .Values.redis_image }}
     referencePolicy:
       type: Local
 ---
