--- a/redash-redis/templates/statefulset.yaml
+++ b/redash-redis/templates/statefulset.yaml
@@ -20,7 +20,7 @@ spec:
         app: {{ .Values.app_name }}
     spec:
       containers:
-      - image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redis_exporter_name }}"
+      - image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redis_exporter_name }}:{{ .Values.redis_exporter_tag }}"
         name: "{{ .Values.redis_exporter_name }}"
         ports:
         - containerPort: 9121
@@ -34,7 +34,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}"
+        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redis_image }}:{{ .Values.redis_tag }}"
         livenessProbe:
           failureThreshold: 5
           initialDelaySeconds: 30
