--- a/redash-redis/templates/imagestream.yaml
+++ b/redash-redis/templates/imagestream.yaml
@@ -9,6 +9,8 @@ spec:
       kind: DockerImage
       name: "image-registry.openshift-image-registry.svc:5000/openshift/{{ .Values.redis_image }}:{{ .Values.redis_tag }}"
     name: "{{ .Values.redis_tag }}"
+    referencePolicy:
+      type: Local
 ---
 apiVersion: image.openshift.io/v1
 kind: ImageStream
@@ -20,3 +22,5 @@ spec:
       kind: DockerImage
       name: "registry.hub.docker.com/{{ .Values.redis_exporter_image }}:{{ .Values.redis_exporter_tag }}"
     name: "{{ .Values.redis_exporter_tag }}"
+    referencePolicy:
+      type: Local
