--- a/redash-redis/templates/statefulset.yaml
+++ b/redash-redis/templates/statefulset.yaml
@@ -62,6 +62,9 @@ spec:
             memory: 1.5Gi
           requests:
             memory: 1.5Gi
+        securityContext:
+          capabilities: {}
+          privileged: false
         volumeMounts:
         - mountPath: /conf
           name: conf
