--- a/redash-redis/templates/statefulset.yaml
+++ b/redash-redis/templates/statefulset.yaml
@@ -63,8 +63,8 @@ spec:
           requests:
             memory: 1.5Gi
         securityContext:
-          capabilities: {}
-          privileged: false
+          runAsUser: 1000650000
+          fsGroup: 1000650000
         volumeMounts:
         - mountPath: /conf
           name: conf
