--- a/redash-redis/templates/statefulset.yaml
+++ b/redash-redis/templates/statefulset.yaml
@@ -28,7 +28,7 @@ spec:
       - command:
         - /conf/update-node.sh
         - redis-server
-        - /conf/redis.conf
+        - /data/redis.conf
         env:
         - name: POD_IP
           valueFrom:
@@ -76,6 +76,11 @@ spec:
           defaultMode:  0755
           name: {{ .Chart.Name }}
         name: conf
+  initContainers:
+  - name: copy
+    image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redis_image }}:{{ .Values.redis_tag }}"
+    command: ["bash", "cp /conf/redis.conf /data/redis.conf"]
+
   volumeClaimTemplates:
   - metadata:
       name: redis-data
