autobuild redash-redis

--- a/redash-redis/templates/statefulset.yaml
+++ b/redash-redis/templates/statefulset.yaml
@@ -71,6 +71,7 @@ spec:
           readOnly: false
       volumes:
       - configMap:
+          defaultMode: 0555
           name: {{ .Chart.Name }}
         name: conf
 
