--- a/redash-redis/templates/statefulset.yaml
+++ b/redash-redis/templates/statefulset.yaml
@@ -27,7 +27,9 @@ spec:
           name: exporter
       - command:
         - /conf/update-node.sh
-        - /usr/bin/redis-server --cluster-enabled no --cluster-require-full-coverage no --cluster-node-timeout 15000 --cluster-config-file /data/nodes.conf --cluster-migration-barrier 1 --appendonly no --protected-mode no --maxmemory 1449551462 
+          # - /usr/bin/redis-server --cluster-enabled no --cluster-require-full-coverage no --cluster-node-timeout 15000 --cluster-config-file /data/nodes.conf --cluster-migration-barrier 1 --appendonly no --protected-mode no --maxmemory 1449551462
+        - redis-server
+        - /conf/redis.conf 
         env:
         - name: POD_IP
           valueFrom:
