--- a/forms-flow-ai/Chart.yaml
+++ b/forms-flow-ai/Chart.yaml
@@ -1,30 +1,30 @@
 ---
 apiVersion: v2
-dependencies:
-  - name: camunda-postgresql
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: formio-mongodb
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: forms-flow-analytics
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: forms-flow-bpm
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: forms-flow-forms
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: forms-flow-idm
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: forms-flow-web
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: forms-flow-webapi
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+#dependencies:
+  #  - name: camunda-postgresql
+  #    version: "v0.0.1"
+  #    repository: "https://cberg-aot.github.io/helm-charts/"
+  #  - name: formio-mongodb
+  #    version: "v0.0.1"
+  #    repository: "https://cberg-aot.github.io/helm-charts/"
+  #  - name: forms-flow-analytics
+  #    version: "v0.0.1"
+  #    repository: "https://cberg-aot.github.io/helm-charts/"
+  #  - name: forms-flow-bpm
+  #    version: "v0.0.1"
+  #    repository: "https://cberg-aot.github.io/helm-charts/"
+  #  - name: forms-flow-forms
+  #    version: "v0.0.1"
+  #    repository: "https://cberg-aot.github.io/helm-charts/"
+  #  - name: forms-flow-idm
+  #    version: "v0.0.1"
+  #    repository: "https://cberg-aot.github.io/helm-charts/"
+  #  - name: forms-flow-web
+  #    version: "v0.0.1"
+  #    repository: "https://cberg-aot.github.io/helm-charts/"
+  #  - name: forms-flow-webapi
+  #    version: "v0.0.1"
+  #    repository: "https://cberg-aot.github.io/helm-charts/"
 name: forms-flow-ai
 version: v0.0.1
 icon: "https://github.com/cberg-aot/helm-charts/blob/gh-pages/icons/icon.large.png"
