autobuild forms-flow-idm

--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -55,7 +55,7 @@ keycloak:
     labels: {"app":"forms-flow-idm"}
     host: "formsflow.idm.apps.devops.aot-technologies.com"
     tls:
-      enabled: false
+      enabled: true
       insecureEdgeTerminationPolicy: Redirect
       termination: edge
   
