--- a/formio-mongodb/templates/secret.yaml
+++ b/formio-mongodb/templates/secret.yaml
@@ -11,7 +11,7 @@ stringData:
   admin-username: admin
   database: {{ .Values.mongodb_database }}
   mongo-oplog-url: mongodb://admin:{{ .Values.mongodb_admin_password }}@{{ .Values.mongodb_service_name }}:27017/local?authSource=admin&replicaSet={{ .Values.mongodb_replica_name }}
-  mongo-url: mongodb://{{ .Values.mongodb_user }}:{{ .Values.mongodb_password }}@{{ .Values.mongodb_service_name }}:27017/{{ .Values.mongodb_database }}?replicaSet={{ .Values.mongodb_replica_name }}
+  MONGO_URL: mongodb://{{ .Values.mongodb_user }}:{{ .Values.mongodb_password }}@{{ .Values.mongodb_service_name }}:27017/{{ .Values.mongodb_database }}?replicaSet={{ .Values.mongodb_replica_name }}
   password: {{ .Values.mongodb_password }}
   replica-name: {{ .Values.mongodb_replica_name }}
   username: {{ .Values.mongodb_user }}
