--- a/forms-flow-webapi-postgresql/Chart.yaml
+++ b/forms-flow-webapi-postgresql/Chart.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: v2
 description: Deployment template for a postgresql server with persistent storage.
-name: webapi-postgresql
-tags: webapi-postgresql-dev
+name: forms-flow-webapi-postgresql
+tags: forms-flow-webapi-postgresql-dev
 version: v0.0.1
