--- a/forms-flow-webapi-postgresql/templates/deploymentconfig.yaml
+++ b/forms-flow-webapi-postgresql/templates/deploymentconfig.yaml
@@ -3,14 +3,13 @@ kind: DeploymentConfig
 metadata:
   generation: 1
   labels:
-    app: "{{ .Values.name }}-{{ .Values.tag_name }}"
+    app: "{{ .Chart.Name }}"
     app-group: "{{ .Values.app_group }}"
-    template: "{{ .Values.name }}-deploy"
-  name: "{{ .Values.name }}-{{ .Values.tag_name }}"
+  name: "{{ .Chart.Name }}"
 spec:
   replicas: 1
   selector:
-    name: {{ .Values.name }}-{{ .Values.tag_name }}
+    name: {{ .Chart.Name }}
   strategy:
     activeDeadlineSeconds: 21600
     recreateParams:
@@ -20,7 +19,7 @@ spec:
   template:
     metadata:
       labels:
-        name: {{ .Values.name }}-{{ .Values.tag_name }}
+        name: {{ .Chart.Name }}
     spec:
       containers:
       - env:
@@ -28,23 +27,23 @@ spec:
           valueFrom:
             configMapKeyRef:
               key: DATABASE_USER
-              name: {{ .Values.name }}-{{ .Values.tag_name }}-config
+              name: {{ .Chart.Name }}
         - name: POSTGRESQL_PASSWORD
           valueFrom:
             secretKeyRef:
               key: DATABASE_PASSWORD
-              name: {{ .Values.name }}-{{ .Values.tag_name }}-secret
+              name: {{ .Chart.Name }}
         - name: POSTGRESQL_DATABASE
           valueFrom:
             configMapKeyRef:
               key: DATABASE_NAME
-              name: {{ .Values.name }}-{{ .Values.tag_name }}-config
+              name: {{ .Chart.Name }}
         - name: POSTGRESQL_ADMIN_DATABASE
           valueFrom:
             secretKeyRef:
               key: DATABASE_ADMIN_PASSWORD
-              name: {{ .Values.name }}-{{ .Values.tag_name }}-secret
-        image: ' '
+              name: {{ .Chart.Name }}
+        image: "image-registry.openshift-image-registry.svc:5000/openshift/{{ .Values.postgresql_image_name }}:{{ .Values.postgresql_image_tag }}"
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
@@ -54,7 +53,7 @@ spec:
           tcpSocket:
             port: 5432
           timeoutSeconds: 1
-        name: {{ .Values.name }}-{{ .Values.tag_name }}
+        name: {{ .Chart.Name }}
         ports:
         - containerPort: 5432
           protocol: TCP
@@ -81,22 +80,22 @@ spec:
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /var/lib/pgsql/data
-          name: {{ .Values.name }}-data
+          name: {{ .Chart.Name }}-data
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: {{ .Values.name }}-data
+      - name: {{ .Chart.Name }}-data
         persistentVolumeClaim:
-          claimName: {{ .Values.name }}-{{ .Values.tag_name }}
+          claimName: {{ .Chart.Name }}
   test: false
   triggers:
   - imageChangeParams:
       automatic: true
       containerNames:
-      - {{ .Values.name }}-{{ .Values.tag_name }}
+      - {{ .Chart.Name }}
       from:
         kind: ImageStreamTag
         name: postgresql:10
