--- a/forms-flow-webapi-postgresql/templates/persistentvolumeclaim.yaml
+++ b/forms-flow-webapi-postgresql/templates/persistentvolumeclaim.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: "{{ .Values.name }}-{{ .Values.tag_name }}"
+    app: "{{ .Chart.Name }}"
     app-group: "{{ .Values.app_group }}"
-    template: "{{ .Values.name }}-deploy"
-  name: "{{ .Values.name }}-{{ .Values.tag_name }}"
+  name: "{{ .Chart.Name }}"
 spec:
   accessModes:
   - ReadWriteOnce
