--- a/forms-flow-webapi/Chart.yaml
+++ b/forms-flow-webapi/Chart.yaml
@@ -1,5 +1,9 @@
 ---
 apiVersion: v2
+dependencies:
+  - name: forms-flow-ai-postgresql
+    version: "v0.0.1"
+    repository: "https://cberg-aot.github.io/helm-charts/"
 name: forms-flow-webapi
 tags: forms-flow-webapi
 version: v0.0.1
