--- a/forms-flow-bpm/Chart.yaml
+++ b/forms-flow-bpm/Chart.yaml
@@ -1,4 +1,8 @@
 ---
 apiVersion: v2
+dependencies:
+  - name: camunda-postgresql
+    version: "v0.0.1"
+    repository: "https://cberg-aot.github.io/helm-charts/"
 name: forms-flow-bpm
 version: v0.0.1
