--- a/forms-flow-ai/values.yaml
+++ b/forms-flow-ai/values.yaml
@@ -1,9 +1,9 @@
 bpm_keycloak_clientid: forms-flow-bpm
 bpm_keycloak_clientsecret: 786001d6-68a8-4519-903c-bc5b5a870d68
-camunda_bpm_url: formsflow.bpm.apps.devops.aot-technologies.com
+camunda_bpm_url: formsflow.bpm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 formio_admin_email: me@defineme.com
 formio_admin_password: admin
 keycloak_realm: forms-flow-ai
-keycloak_url: formsflow.idm.apps.devops.aot-technologies.com
+keycloak_url: formsflow.idm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 keycloak_web_clientid: forms-flow-web
 name: forms-flow-ai
