--- a/forms-flow-web/values.yaml
+++ b/forms-flow-web/values.yaml
@@ -1,12 +1,12 @@
 app_name: forms-flow-ai
-camunda_url: formsflow.bpm.apps.devops.aot-technologies.com
+camunda_url: formsflow.bpm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 cpu_limit: 750m
 cpu_request: 100m
-forms_url: formio.apps.devops.aot-technologies.com
+forms_url: formio.apps.{{ .Release.Namespace }}.devops.aot-technologies.com
 image_tag: latest
 kc_mount_path: /usr/share/nginx/html/config/kc
 keycloak_realm: forms-flow-ai
-keycloak_url: formsflow.idm.apps.devops.aot-technologies.com
+keycloak_url: formsflow.idm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 memory_limit: 2Gi
 memory_request: 100Mi
 mount_path: /usr/share/nginx/html/config/
@@ -20,5 +20,5 @@ redash_secret_key: '# TODO: must define a default value for .redash_secret_key'
 source_context_dir: /forms-flow-web 
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
-web_api_url: formsflow.webapi.apps.devops.aot-technologies.com
-web_url: formsflow.web.apps.devops.aot-technologies.com
+web_api_url: formsflow.webapi.apps.{{ .Release.Namespace }}.devops.aot-technologies.com
+web_url: formsflow.web.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
