--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -29,7 +29,9 @@ keycloak:
       privileged: false
 
   podSecurityContext: 
-    enabled: false
+    securityContext:
+      capabilities: {}
+      privileged: false
   
 ## "auto" is especially useful for OpenShift which has scc with dynamic userids (and 0 is not allowed).
 ## You may want to use this volumePermissions.securityContext.runAsUser="auto" in combination with
