--- a/forms-flow-analytics/templates/route.yaml
+++ b/forms-flow-analytics/templates/route.yaml
@@ -5,7 +5,7 @@ metadata:
     app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
 spec:
-  host: {{ .Values.analytics_url }}
+  host: formsflow.analytics.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
   path: /
   port:
     targetPort: "7000"
