autobuild forms-flow-analytics

--- a/forms-flow-analytics/templates/route.yaml
+++ b/forms-flow-analytics/templates/route.yaml
@@ -5,7 +5,7 @@ metadata:
     app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
 spec:
-  host: {{ .Values.analytics_url }}
+  host: {{ tpl .Values.analytics_url . }}
   path: /
   port:
     targetPort: "7000"
