autobuild forms-flow-analytics

--- a/forms-flow-bpm/values.yaml
+++ b/forms-flow-bpm/values.yaml
@@ -10,14 +10,14 @@ camunda_hik_idle_timeout: 600000
 camunda_hikari_connection_timeout: 30000
 camunda_hikari_maximum_poolsize: 10
 camunda_session_db_resource_name: camunda-session-postgresql
-camunda_url: "formsflow.bpm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
+camunda_url: "bpm.{{ .Release.Name }}.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
 database_port: 5432
-forms_url: "formio.apps.{{ .Release.Namespace }}.devops.aot-technologies.com"
+forms_url: "formio.{{ .Release.Name }}.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
 formsflow_config_name: forms-flow-ai
 formsflow_secret: forms-flow-ai
 hikari_valid_timeout: 5000
 image_tag: latest
-keycloak_url: "formsflow.idm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
+keycloak_url: "idm.{{ .Release.Name }}.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
 mail_from: support@aot-technologies.com
 mail_password: YwJaMyhmHbBg0cp6
 mail_user: support@aot-technologies.com
@@ -28,7 +28,7 @@ smtp_server: smtp-relay.sendinblue.com
 source_context_dir: /forms-flow-bpm
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
-web_api_url: "formsflow.webapi.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
+web_api_url: "webapi.{{ Release.Name }}.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
 websocket_encrypt_key: FormsFlow.AI@Taft
 websocket_message_type: TASK_EVENT
 websocket_security_origin: "https://*.devops.aot-technologies.com"
