--- a/forms-flow-bpm/values.yaml
+++ b/forms-flow-bpm/values.yaml
@@ -28,7 +28,7 @@ smtp_server: smtp-relay.sendinblue.com
 source_context_dir: /forms-flow-bpm
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
-web_api_url: "webapi.{{ Release.Name }}.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
+web_api_url: "webapi.{{ .Release.Name }}.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
 websocket_encrypt_key: FormsFlow.AI@Taft
 websocket_message_type: TASK_EVENT
 websocket_security_origin: "https://*.devops.aot-technologies.com"
