--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -39,7 +39,7 @@ keycloak:
     enabled: true
     path:  /
     labels: {"app":"forms-flow-idm"}
-    host: "idm.{{ .Release.Name }}.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
+    host: "idm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
     tls:
       enabled: true
       insecureEdgeTerminationPolicy: Allow
