--- a/forms-flow-forms/templates/deploymentconfig.yaml
+++ b/forms-flow-forms/templates/deploymentconfig.yaml
@@ -43,7 +43,7 @@ spec:
             secretKeyRef:
               key: FORMIO_ROOT_PASSWORD
               name: {{ .Values.formsflow_secret }}
-        image: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}
+        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}:{{ .Values.tag_name }}"
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
