--- a/forms-flow-webapi/templates/deploymentconfig.yaml
+++ b/forms-flow-webapi/templates/deploymentconfig.yaml
@@ -97,7 +97,7 @@ spec:
               name: "{{ .Values.formsflow_config_name }}"
         - name: FORMSFLOW_API_CORS_ORIGINS
           value: '*'
-        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}"
+        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}:{{ .Values.tag_name }}"
         name: "{{ .Chart.Name }}"
         ports:
         - containerPort: 5000
