--- a/forms-flow-ai/values.yaml
+++ b/forms-flow-ai/values.yaml
@@ -7,3 +7,4 @@ keycloak_realm: forms-flow-ai
 keycloak_url: idm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 keycloak_web_clientid: forms-flow-web
 name: forms-flow-ai
+web_api_url: webapi.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
