--- a/.github/workflows/forms-flow-ai-cd.yaml
+++ b/.github/workflows/forms-flow-ai-cd.yaml
@@ -27,6 +27,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         with:
-          chars_dir: ./
+          charts_dir: ./
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
