--- a/.github/workflows/forms-flow-ai-cd.yaml
+++ b/.github/workflows/forms-flow-ai-cd.yaml
@@ -24,7 +24,9 @@ jobs:
         with:
           version: v3.4.0
 
-      - name: Run chart-releaser
+      - name: Package formio-mongodb
         uses: helm/chart-releaser-action@v1.2.1
+        with:
+          charts_dir: formio-mongodb
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
