--- a/forms-flow-analytics/Chart.yaml
+++ b/forms-flow-analytics/Chart.yaml
@@ -2,11 +2,11 @@
 apiVersion: v2
 dependencies:
   - name: forms-flow-analytics-postgresql
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    version: v0.1.0
+    repository: https://cberg-aot.github.io/helm-charts/
   - name: redash-redis
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    version: v0.1.0
+    repository: https://cberg-aot.github.io/helm-charts/
 name: forms-flow-analytics
 tags: forms-flow-analytics
-version: v0.0.1
+version: v0.1.0
