--- a/forms-flow-bpm/Chart.yaml
+++ b/forms-flow-bpm/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v2
 dependencies:
   - name: camunda-postgresql
-    version: "v0.0.1"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    version: v0.1.0
+    repository: https://cberg-aot.github.io/helm-charts/
 name: forms-flow-bpm
-version: v0.0.1
+version: v0.1.0
