--- a/.github/workflows/forms-flow-ai-cd.yaml
+++ b/.github/workflows/forms-flow-ai-cd.yaml
@@ -28,5 +28,7 @@ jobs:
         uses: helm/chart-releaser-action@v1.2.1
         with:
           charts_dir: /home/runner/work/helm-charts/helm-charts/
+          charts_repo_url: https://cberg-aot.github.io/helm-charts/
+
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
