Revert "updated resources" - Need to reduce resources and add limits for 'bursting'
This reverts commit 04a904056997d2e241e0bbc1e9a4a4dd14c84f8d.

--- a/formio-mongodb/templates/statefulset.yaml
+++ b/formio-mongodb/templates/statefulset.yaml
@@ -72,6 +72,13 @@ spec:
             command:
             - stat
             - /tmp/
+        resources:
+          limits:
+            cpu: {{ .Values.cpu_limit }}
+            memory: {{ .Values.memory_limit }}
+          requests:
+            cpu: {{ .Values.cpu_request }}
+            memory: {{ .Values.memory_request }}
         volumeMounts:
         - mountPath: /var/lib/mongodb/data
           name: mongo-data
