--- a/forms-flow-bpm/templates/buildconfig.yaml
+++ b/forms-flow-bpm/templates/buildconfig.yaml
@@ -12,6 +12,13 @@ spec:
       kind: ImageStreamTag
       name: "{{ .Chart.Name }}:{{ .Values.image_tag }}"
   postCommit: {}
+  resources:
+    limits:
+      cpu: "1"
+      memory: 8Gi
+    requests:
+      cpu: "1"
+      memory: 4Gi
   runPolicy: Serial
   source:
     contextDir: {{ .Values.source_context_dir }}
