--- a/forms-flow-bpm/templates/deploymentconfig.yaml
+++ b/forms-flow-bpm/templates/deploymentconfig.yaml
@@ -12,6 +12,7 @@ spec:
     app: "{{ .Chart.Name }}"
   strategy:
     activeDeadlineSeconds: 21600
+    resources: {}
     rollingParams:
       intervalSeconds: 1
       maxSurge: 25%
@@ -158,6 +159,13 @@ spec:
           periodSeconds: 60
           successThreshold: 1
           timeoutSeconds: 3
+        resources:
+          limits:
+            cpu: 3
+            memory: 5Gi
+          requests:
+            cpu: 1
+            memory: 2Gi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
