--- a/forms-flow-forms/templates/deploymentconfig.yaml
+++ b/forms-flow-forms/templates/deploymentconfig.yaml
@@ -62,6 +62,13 @@ spec:
           tcpSocket:
             port: 3001
           timeoutSeconds: 1
+        resources:
+          limits:
+            cpu: {{ .Values.cpu_limit }}
+            memory: {{ .Values.memory_limit }}
+          requests:
+            cpu: {{ .Values.cpu_request }}
+            memory: {{ .Values.memory_request }}
         stdin: true
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
