--- a/forms-flow-web/templates/deploymentconfig.yaml
+++ b/forms-flow-web/templates/deploymentconfig.yaml
@@ -12,6 +12,13 @@ spec:
     app: {{ .Values.app_name }}
   strategy:
     activeDeadlineSeconds: 21600
+    resources:
+      limits:
+        cpu: {{ .Values.cpu_limit }}
+        memory: {{ .Values.memory_limit }}
+      requests:
+        cpu: {{ .Values.cpu_request }}
+        memory: {{ .Values.memory_request }}
     rollingParams:
       intervalSeconds: 1
       maxSurge: 25%
@@ -32,6 +39,7 @@ spec:
         name: {{ .Chart.Name }}
         ports:
         - containerPort: 8080
+        resources: {}
         tty: true
         volumeMounts:
         - mountPath: {{ .Values.kc_mount_path }}
