--- a/forms-flow-webapi-postgresql/templates/deploymentconfig.yaml
+++ b/forms-flow-webapi-postgresql/templates/deploymentconfig.yaml
@@ -14,6 +14,7 @@ spec:
     activeDeadlineSeconds: 21600
     recreateParams:
       timeoutSeconds: 600
+    resources: {}
     type: Recreate
   template:
     metadata:
@@ -69,6 +70,9 @@ spec:
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 1
+        resources:
+          limits:
+            memory: {{ .Values.memory_limit }}
         securityContext:
           capabilities: {}
           privileged: false
