--- a/forms-flow-webapi/templates/buildconfig.yaml
+++ b/forms-flow-webapi/templates/buildconfig.yaml
@@ -9,6 +9,13 @@ spec:
     to:
       kind: ImageStreamTag
       name: "{{ .Chart.Name }}:{{ .Values.tag_name }}"
+  resources:
+    limits:
+      cpu: "1"
+      memory: 8Gi
+    requests:
+      cpu: "1"
+      memory: 4Gi
   runPolicy: Serial
   source:
     contextDir: "{{ .Values.source_context_dir }}"
