--- a/redash-redis/templates/statefulset.yaml
+++ b/redash-redis/templates/statefulset.yaml
@@ -57,6 +57,11 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 3
           timeoutSeconds: 5
+        resources:
+          limits:
+            memory: 1.5Gi
+          requests:
+            memory: 1.5Gi
         volumeMounts:
         - mountPath: /conf
           name: conf
