--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -1,9 +1,9 @@
-name: Forms-Flow-Ai Packaging 
+name: Release Charts
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   release:
@@ -24,11 +24,12 @@ jobs:
         with:
           version: v3.4.0
 
-      - name: Package Formsflow
-        uses: helm/chart-releaser-action@v1.2.1
-        with:
-          charts_dir: /home/runner/work/helm-charts/helm-charts/
-          charts_repo_url: https://cberg-aot.github.io/helm-charts/
+			- name: Add Helm dependency repos
+  			run: |
+    			helm repo add aot https://cberg-aot.github.io/helm-charts/
+    			helm repo update
 
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.2.1
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
