--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -32,6 +32,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         with:
-          charts_dir: .
+          charts_dir: formio-mongodb
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
