--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 camunda-postgres/
 formio-mongodb/
+formsflow.ai/
+forms-flow-ai
+forms-flow-analytics-postgresql/
 forms-flow-analytics/
 forms-flow-bpm/
 forms-flow-forms/
 forms-flow-idm/
+forms-flow-webapi/
+redash-redis/
