Revert "refactored formsflow builds into seperate charts"
This reverts commit f8aa67e0b309b3f57311760401b36b3a3512dafb.

--- a/charts/forms-flow-web/templates/deploymentconfig.yaml
+++ b/charts/forms-flow-web/templates/deploymentconfig.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
       - env: null
-        image: "{{ tpl .Values.image_url }}:{{ .Values.image_tag }}"
+        image: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}
         imagePullPolicy: Always
         name: {{ .Chart.Name }}
         ports:
