--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -61,5 +61,7 @@ jobs:
       
       - name: Package Formsflow 
         uses: helm/chart-releaser-action@v1.2.1
+        with:
+          charts_dir: charts
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
