--- a/charts/formsflow.ai/Chart.yaml
+++ b/charts/formsflow.ai/Chart.yaml
@@ -3,28 +3,28 @@ apiVersion: v2
 dependencies:
   - name: formio-mongodb
     version: "v0.1.0"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    repository: "file://./"
   - name: forms-flow-ai
     version: "v0.1.0"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    repository: "file://./"
   - name: forms-flow-analytics
     version: "v0.1.0"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    repository: "file://./"
   - name: forms-flow-bpm
     version: "v0.1.0"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    repository: "file://./"
   - name: forms-flow-forms
     version: "v0.1.0"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    repository: "file://./"
   - name: forms-flow-idm
     version: "v0.1.0"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    repository: "file://./"
   - name: forms-flow-web
     version: "v0.1.0"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    repository: "file://./"
   - name: forms-flow-webapi
     version: "v0.1.0"
-    repository: "https://cberg-aot.github.io/helm-charts/"
+    repository: "file://./"
 name: formsflow.ai
 version: v0.1.0
 icon: "https://github.com/cberg-aot/helm-charts/blob/gh-pages/icons/icon.large.png"
